--- a/compose.yaml
+++ b/compose.yaml
@@ -3,7 +3,7 @@ version: '3.5'
 services:
   postgres:
     container_name: springboot_postgres
-    image: postgres:latest
+    image: postgres:16
     environment:
       POSTGRES_USER: springuser
       POSTGRES_PASSWORD: springpassword
